# medipt

./: .buildinfo  .gitattributes  .gitignore  CNAME  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readthedocs.yml  requirements.txt  resample_image_test.py  search.html  searchindex.js  setup.py  setup_hold.py  test_class_inheritance.py  test_scale_gamma.py  utils.py
.doctrees/: index.doctree
.doctrees/documentation/: medipt.crop_image.doctree  medipt.doctree  medipt.resample_image.doctree  medipt.transforms.doctree  medipt.transforms.intensity.doctree  medipt.transforms.spatial.doctree  medipt.transforms.spatial.functional_legacy.doctree  medipt.utils.doctree  modules.doctree
.doctrees/install/: installation.doctree
.github/: documentation.yaml
.github/actions/setup/: action.yml
.github/etc/: miniconda-environment.yml
.github/workflows/: build_and_publish.yml  build_publish.yml  build_wheel.yml  build_wheels.yml  documentation.yaml  documentation.yml  static.yml  test_build.yml
ImageProcessingTools/: __init__.py
ImageProcessingTools/ResampleImage/: resample_image.py
ImageProcessingTools/Utils/: __init__.py  image_input_output_space.py  random_uniform_float.py
ImageProcessingTools/resample_image/: resample_image.py
ImageProcessingTools/transformations/: transform_coordinate.py
ImageProcessingTools/utils/: __init__.py  image_input_output_space.py  intensity_utils.py  random_float.py  spatial_utils.py
MedIPT/: __init__.py
MedIPT/resample_image/: resample_image.py
MedIPT/transformations/: transform_coordinate.py
MedIPT/transforms/intensity/: __init__.py  (+4 more)
_modules/: index.html
_modules/medipt/: utils.html
_sources/documentation/: medipt.crop_image.rst.txt  medipt.rst.txt  medipt.transforms.intensity.rst.txt  medipt.transforms.rst.txt  medipt.utils.rst.txt  modules.rst.txt
_sources/install/: installation.rst.txt
conda/: meta.yaml  upload_wheels.sh
docs/: CNAME  Makefile  conf.py  requirements.txt
docs/_source/: conf.py  index.rst  modules.rst
docs/source/: CNAME  ImageProcessingTools.resample_image.rst  ImageProcessingTools.rst  ImageProcessingTools.transformations.intensity.rst  ImageProcessingTools.transformations.rst  ImageProcessingTools.transformations.spatial.functional_legacy.rst  ImageProcessingTools.transformations.spatial.rst  MedIPT.resample_image.rst  MedIPT.rst  MedIPT.transforms.intensity.rst  MedIPT.transforms.rst  MedIPT.transforms.spatial.rst  MedIPT.utils.rst  conf.py  index.rst  modules.rst
documentation/: medipt.crop_image.html  medipt.html  medipt.resample_image.html  medipt.transforms.html  medipt.transforms.intensity.html  medipt.transforms.spatial.functional_legacy.html  medipt.transforms.spatial.html  medipt.utils.html  modules.html
examples/: spatial_augmentation_example.ipynb
imageprocessingtools/: __init__.py
imageprocessingtools/resample_image/: resample_image.py
install/: installation.html
medipt/: __init__.py  _version.py
medipt/crop_image/: threshold_crop_background.py
medipt/resample_image/: __init__.py  resample_image.py
medipt/transforms/: __init__.py  generate_sitk_transform.py  transform_coordinate.py
medipt/utils/: __init__.py  image_input_output_space.py  random_float.py  spatial_utils.py
(+147 files in other folders)
