[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools_scm[toml]>=6.2",

]
build-backend = "setuptools.build_meta"

[project]
name="medipt"

authors=[
    {name="Geoff Klein"},
]
license={text="BSD 3-Clause"}
description="Medical Imaging Processing Tools"
readme="README.md"
requires-python=">=3.7"
dynamic = ["dependencies", "version"]
#dynamic = ["dependencies"]
keywords=[
    "medical-imaging",
]

# pyproject.toml
[tool.setuptools_scm]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["medipt", "medipt.*"]
namespaces = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.yapf]
based_on_style = "pep8"
split_before_named_assigns = false
blank_line_before_nested_class_or_def = false


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
skip = [".gitingore", "__init__.py"]


[project.urls]
repository="https://github.com/kleingeo/medipt"
