[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "versioneer[toml]",

]
build-backend = "setuptools.build_meta"

[project]
name="medipt"

authors=[
    {name="Geoff Klein"},
]
license={text="BSD 3-Clause"}
description="Medical Imaging Processing Tools"
readme="README.md"
requires-python=">=3.7"
dynamic = ["dependencies", "version"]
#dynamic = ["dependencies"]
keywords=[
    "medical-imaging",
]

# pyproject.toml
[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["medipt", "medipt.*"]
namespaces = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.yapf]
based_on_style = "pep8"
split_before_named_assigns = false
blank_line_before_nested_class_or_def = false


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
skip = [".gitingore", "__init__.py"]


[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "medipt/_version.py"
versionfile_build = "medipt/_version.py"
tag_prefix = "v"
parentdir_prefix = "medipt-"


[project.urls]
repository="https://github.com/kleingeo/medipt"
